# orderbook-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
benchmarks/: bench_harness.hpp  order_generator.hpp  throughput_bench.cpp
benchmarks/results/: baseline.md
docs/: ARCHITECTURE.md  ROADMAP.md
include/orderbook/: matching_engine.hpp  order_book.hpp  price_level.hpp  types.hpp
src/core/: order.cpp  order_book.cpp  price_level.cpp
src/matching/: matching_engine.cpp
tests/unit/: matching_engine_test.cpp  order_book_test.cpp  order_test.cpp  price_level_test.cpp
tools/: run_benchmarks.sh
